# i3astropy

./: .gitignore  .pre-commit-config.yaml  COPYING  README.md  REUSE.toml  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: tests.yml  unit_tests.yml
.reuse/: dep5
examples/: IceCubeAsBuiltHoleCoordinates.txt  compare_ps_sample.py  compare_ps_sample.txt  plot_analemma.py  plot_moon.py  plot_sidereal.py  plot_sun_azimuth.py  tangential_projection.py  tutorial.py
i3astro/: __init__.py
i3astropy/: __init__.py
src/i3astropy/: __init__.py
tests/: test_coord.py  test_sidereal.py  test_time.py
