# SPDX-FileCopyrightText: © 2022 the i3astropy contributors
#
# SPDX-License-Identifier: BSD-2-Clause

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<4"]

[project]
authors = [{name = "Kevin Meagher"}]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: BSD License',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering :: Astronomy',
  'Topic :: Scientific/Engineering :: Physics'
]
dependencies = ["numpy", "astropy"]
dynamic = ["version", "description"]
keywords = ["python", "science", "astronomy", "astrophysics", "astropy", "IceCube", "neutrino"]
license = {file = "LICENSES/BSD-2-Clause.txt"}
name = "i3astropy"
readme = "README.md"
requires-python = "~=3.9"

[project.optional-dependencies]
dev = ["pre-commit"]
docs = ['mkdocs']
examples = ["matplotlib"]
test = ["pytest", "pytest-cov", "pytest-subtests"]

[project.urls]
Collaboration = "https://icecube.wisc.edu"
Source = "https://github.com/icecube/i3astropy"

[tool.black]
line-length = 108
target-version = ['py39']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 108
multi_line_output = 3
use_parentheses = true

[tool.mypy]
allow_subclassing_any = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
exclude = 'docs|examples|tests'
files = 'src/i3astropy'
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
strict = true
warn_unreachable = true

[tool.pylint.format]
max-line-length = "108"

[tool.pylint.messages_control]
disable = ["W0201", "R0903", "E0401", "C0411"]

[tool.pytest.ini_options]
addopts = ["--cov=i3astropy", "--doctest-glob=README.md", "-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
log_cli_level = "INFO"
minversion = 7
testpaths = ["tests", "README.md"]
xfail_strict = true

[tool.ruff]
line-length = 108
show-fixes = true
src = ['src']
target-version = "py39"

[tool.ruff.lint]
fixable = ["I"]
ignore = [
  "ANN401",  # any-type
  "INP001",  # flake8-no-pep420
  "S101",  # assert-used
  "D213",  # multi-line-summary-second-line incompatible with multi-line-summary-first-line
  "D203",  # one-blank-line-before-class" incompatible with no-blank-line-before-class
  "RUF012"  # mutable-class-default
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
  "ANN",  # flake8-annotations
  "PLR",  # max-statements
  "ARG",  # flake8-unused-arguments
  "T201"  # flake8-print
]
"tests/*" = [
  "ANN"  # flake8-annotations
]
